--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,79 +7,134 @@
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       min-height: 100vh;
       margin: 0;
       display: flex;
       justify-content: center;
       align-items: center;
+      color: #fff;
     }
     .container {
-      background: #ffffffee;
-      padding: 30px;
+      backdrop-filter: blur(12px);
+      background: rgba(255, 255, 255, 0.1);
       border-radius: 20px;
-      box-shadow: 0 15px 40px rgba(0,0,0,0.2);
-      max-width: 800px;
+      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+      padding: 30px;
+      max-width: 850px;
       width: 90%;
+      animation: fadeIn 1s ease-in-out;
     }
-    h1, h2 {
-      color: #2d0b5e;
+    h1 {
+      text-align: center;
+      font-size: 2.2em;
+      margin-bottom: 10px;
+      background: linear-gradient(90deg, #ff6ec4, #7873f5);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+    .tabs {
+      display: flex;
+      justify-content: space-around;
+      margin-bottom: 20px;
+    }
+    .tab {
+      cursor: pointer;
+      padding: 12px 20px;
+      border-radius: 30px;
+      background: linear-gradient(135deg, #ff6ec4, #7873f5);
+      color: white;
+      font-weight: bold;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      transition: transform 0.3s, background 0.3s;
+    }
+    .tab:hover, .tab.active {
+      transform: scale(1.05);
+      background: linear-gradient(135deg, #43e97b, #38f9d7);
+    }
+    .content {
+      display: none;
+      animation: fadeIn 0.8s;
+    }
+    .content.active {
+      display: block;
+    }
+    .card {
+      background: rgba(255,255,255,0.1);
+      border-radius: 15px;
+      padding: 20px;
+      margin: 15px 0;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+      backdrop-filter: blur(8px);
+      transition: transform 0.3s;
+    }
+    .card:hover {
+      transform: translateY(-5px) scale(1.02);
     }
     a {
-      color: #5a189a;
+      color: #80ffdb;
       text-decoration: none;
     }
     a:hover {
       text-decoration: underline;
     }
-    .card {
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      color: #fff;
-      border-radius: 15px;
-      padding: 20px;
-      margin: 15px 0;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-      transform: perspective(1000px) rotateX(2deg);
-      transition: transform 0.3s ease;
-    }
-    .card:hover {
-      transform: perspective(1000px) rotateX(0deg) scale(1.02);
-    }
     .footer {
       text-align: center;
       margin-top: 30px;
       font-size: 0.85em;
-      color: #555;
+      color: #ddd;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px);}
+      to { opacity: 1; transform: translateY(0);}
     }
   </style>
 </head>
 <body>
   <div class="container">
     <h1>Dr. Ajeet Bhagwat Bhane</h1>
-    <p><strong>Affiliation:</strong> Department of Mechanical Engineering, SND COE & RC, SPPU, Maharashtra, India</p>
-    <p><strong>Google Scholar:</strong> <a href="https://scholar.google.com/citations?user=_uFidiYAAAAJ" target="_blank">View Profile</a></p>
-
-    <h2>Citation Metrics</h2>
-    <div class="card" id="metrics">
-      Loading citation data...
+    <div class="tabs">
+      <div class="tab active" data-tab="profile">Profile</div>
+      <div class="tab" data-tab="metrics">Metrics</div>
+      <div class="tab" data-tab="research">Research</div>
+      <div class="tab" data-tab="contact">Contact</div>
     </div>
 
-    <h2>Research Interests</h2>
-    <div class="card">
-      Mechanical Design, Robotics & Automation, Fluid Mechanics, Thermal Systems
+    <div class="content active" id="profile">
+      <div class="card">
+        <strong>Affiliation:</strong><br>
+        Department of Mechanical Engineering, SND COE & RC, SPPU, Maharashtra, India
+      </div>
+      <div class="card">
+        <strong>Google Scholar:</strong><br>
+        <a href="https://scholar.google.com/citations?user=_uFidiYAAAAJ" target="_blank">View Profile</a>
+      </div>
     </div>
 
-    <h2>Selected Publications</h2>
-    <div class="card">
-      <strong>Machining of hybrid Al alloys</strong> (2025) — Citations: <span id="pub1">[Fetching]</span>
-    </div>
-    <div class="card">
-      <strong>Torque to Preload in Bolt Joints</strong> (2024) — Citations: <span id="pub2">[Fetching]</span>
+    <div class="content" id="metrics">
+      <div class="card" id="metrics-data">
+        Loading citation data...
+      </div>
     </div>
 
-    <h2>Contact</h2>
-    <div class="card">
-      Email: <a href="mailto:ajeetbhane@gmail.com">ajeetbhane@gmail.com</a>
+    <div class="content" id="research">
+      <div class="card">
+        <strong>Research Interests:</strong><br>
+        Mechanical Design, Robotics & Automation, Fluid Mechanics, Thermal Systems
+      </div>
+      <div class="card">
+        <strong>Selected Publications:</strong><br>
+        <ul>
+          <li><strong>Machining of hybrid Al alloys</strong> (2025) — Citations: <span id="pub1">[Fetching]</span></li>
+          <li><strong>Torque to Preload in Bolt Joints</strong> (2024) — Citations: <span id="pub2">[Fetching]</span></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="content" id="contact">
+      <div class="card">
+        Email: <a href="mailto:ajeetbhane@gmail.com">ajeetbhane@gmail.com</a>
+      </div>
     </div>
 
     <div class="footer">
@@ -89,14 +143,29 @@
   </div>
 
   <script>
+    // Tab switching
+    const tabs = document.querySelectorAll('.tab');
+    const contents = document.querySelectorAll('.content');
+
+    tabs.forEach(tab => {
+      tab.addEventListener('click', () => {
+        tabs.forEach(t => t.classList.remove('active'));
+        contents.forEach(c => c.classList.remove('active'));
+
+        tab.classList.add('active');
+        document.getElementById(tab.dataset.tab).classList.add('active');
+      });
+    });
+
+    // Fetch citation data
     fetch('https://serpapi.com/search.json?engine=google_scholar_author&author_id=_uFidiYAAAAJ&api_key=demo')
       .then(response => response.json())
       .then(data => {
-        const metrics = document.getElementById('metrics');
+        const metrics = document.getElementById('metrics-data');
         if(data && data.author){
           metrics.innerHTML = `
-            <strong>Total Citations:</strong> ${data.author.cited_by} <br>
-            <strong>h-index:</strong> ${data.author.h_index} <br>
+            <strong>Total Citations:</strong> ${data.author.cited_by}<br>
+            <strong>h-index:</strong> ${data.author.h_index}<br>
             <strong>i10-index:</strong> ${data.author.i10_index}
           `;
           document.getElementById('pub1').textContent = data.articles[0]?.cited_by_count ?? 'N/A';
@@ -106,7 +175,7 @@
         }
       })
       .catch(() => {
-        document.getElementById('metrics').textContent = 'Error loading citation data.';
+        document.getElementById('metrics-data').textContent = 'Error loading citation data.';
       });
   </script>
 </body>
