--- a/index.html
+++ b/index.html
@@ -5,52 +5,56 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Dr. Ajeet Bhagwat Bhane | Research Profile</title>
   <style>
-    body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      min-height: 100vh;
+    html, body {
+      height: 100%;
       margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #000;
       color: #fff;
+      overflow-x: hidden;
+    }
+    #particles-js {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      z-index: -1;
+      background: #000;
     }
     .container {
       backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.1);
+      background: rgba(255, 255, 255, 0.05);
       border-radius: 20px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
+      box-shadow: 0 20px 50px rgba(0,0,0,0.7);
       padding: 30px;
       max-width: 850px;
-      width: 90%;
-      animation: fadeIn 1s ease-in-out;
+      margin: 50px auto;
     }
     h1 {
       text-align: center;
-      font-size: 2.2em;
-      margin-bottom: 10px;
-      background: linear-gradient(90deg, #ff6ec4, #7873f5);
+      font-size: 2.5em;
+      background: linear-gradient(90deg, #00c6ff, #ff7e5f);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
     .tabs {
       display: flex;
-      justify-content: space-around;
+      justify-content: center;
+      flex-wrap: wrap;
       margin-bottom: 20px;
     }
     .tab {
       cursor: pointer;
       padding: 12px 20px;
+      margin: 5px;
       border-radius: 30px;
-      background: linear-gradient(135deg, #ff6ec4, #7873f5);
-      color: white;
+      background: linear-gradient(135deg, #00c6ff, #0072ff);
       font-weight: bold;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
+      box-shadow: 0 4px 15px rgba(0,0,0,0.5);
       transition: transform 0.3s, background 0.3s;
     }
     .tab:hover, .tab.active {
       transform: scale(1.05);
-      background: linear-gradient(135deg, #43e97b, #38f9d7);
+      background: linear-gradient(135deg, #ff7e5f, #feb47b);
     }
     .content {
       display: none;
@@ -60,12 +64,12 @@
       display: block;
     }
     .card {
-      background: rgba(255,255,255,0.1);
+      background: rgba(255,255,255,0.07);
       border-radius: 15px;
       padding: 20px;
       margin: 15px 0;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      backdrop-filter: blur(8px);
+      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
+      backdrop-filter: blur(6px);
       transition: transform 0.3s;
     }
     .card:hover {
@@ -82,7 +86,7 @@
       text-align: center;
       margin-top: 30px;
       font-size: 0.85em;
-      color: #ddd;
+      color: #aaa;
     }
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(20px);}
@@ -91,6 +95,8 @@
   </style>
 </head>
 <body>
+  <div id="particles-js"></div>
+
   <div class="container">
     <h1>Dr. Ajeet Bhagwat Bhane</h1>
     <div class="tabs">
@@ -142,16 +148,32 @@
     </div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
+    particlesJS("particles-js", {
+      "particles": {
+        "number": { "value": 60 },
+        "color": { "value": ["#00c6ff", "#ff7e5f", "#80ffdb"] },
+        "shape": { "type": "circle" },
+        "opacity": { "value": 0.7, "random": true },
+        "size": { "value": 3, "random": true },
+        "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.2, "width": 1 },
+        "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "out_mode": "bounce" }
+      },
+      "interactivity": {
+        "events": { "onhover": { "enable": true, "mode": "grab" } },
+        "modes": { "grab": { "distance": 200, "line_linked": { "opacity": 0.5 } } }
+      },
+      "retina_detect": true
+    });
+
     // Tab switching
     const tabs = document.querySelectorAll('.tab');
     const contents = document.querySelectorAll('.content');
-
     tabs.forEach(tab => {
       tab.addEventListener('click', () => {
         tabs.forEach(t => t.classList.remove('active'));
         contents.forEach(c => c.classList.remove('active'));
-
         tab.classList.add('active');
         document.getElementById(tab.dataset.tab).classList.add('active');
       });
@@ -180,3 +202,4 @@
   </script>
 </body>
 </html>
+
