--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,13 +13,27 @@
       background: #000;
       color: #fff;
       overflow-x: hidden;
+      position: relative;
     }
     #particles-js {
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      z-index: -1;
-      background: #000;
+      z-index: -2;
+    }
+    .blobs {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: radial-gradient(circle at 20% 30%, rgba(79,172,254,0.3) 0%, transparent 40%),
+                  radial-gradient(circle at 80% 60%, rgba(244,114,182,0.3) 0%, transparent 50%),
+                  radial-gradient(circle at 50% 80%, rgba(199,113,237,0.2) 0%, transparent 50%);
+      animation: moveBlobs 10s infinite alternate;
+      z-index: -3;
+    }
+    @keyframes moveBlobs {
+      0% { background-position: 20% 30%, 80% 60%, 50% 80%; }
+      100% { background-position: 25% 35%, 75% 65%, 55% 75%; }
     }
     .container {
       backdrop-filter: blur(12px);
@@ -32,7 +47,7 @@
     h1 {
       text-align: center;
       font-size: 2.5em;
-      background: linear-gradient(90deg, #00c6ff, #ff7e5f);
+      background: linear-gradient(90deg, #00f2fe, #c471ed, #f7797d);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
@@ -47,14 +62,14 @@
       padding: 12px 20px;
       margin: 5px;
       border-radius: 30px;
-      background: linear-gradient(135deg, #00c6ff, #0072ff);
+      background: linear-gradient(135deg, #00f2fe, #4facfe);
       font-weight: bold;
       box-shadow: 0 4px 15px rgba(0,0,0,0.5);
       transition: transform 0.3s, background 0.3s;
     }
     .tab:hover, .tab.active {
       transform: scale(1.05);
-      background: linear-gradient(135deg, #ff7e5f, #feb47b);
+      background: linear-gradient(135deg, #f7797d, #c471ed);
     }
     .content {
       display: none;
@@ -65,15 +80,17 @@
     }
     .card {
       background: rgba(255,255,255,0.07);
+      border: 1px solid transparent;
       border-radius: 15px;
       padding: 20px;
       margin: 15px 0;
       box-shadow: 0 10px 30px rgba(0,0,0,0.5);
       backdrop-filter: blur(6px);
-      transition: transform 0.3s;
+      transition: transform 0.3s, border 0.3s;
     }
     .card:hover {
       transform: translateY(-5px) scale(1.02);
+      border: 1px solid rgba(79,172,254,0.5);
     }
     a {
       color: #80ffdb;
@@ -96,6 +113,7 @@
 </head>
 <body>
   <div id="particles-js"></div>
+  <div class="blobs"></div>
 
   <div class="container">
     <h1>Dr. Ajeet Bhagwat Bhane</h1>
@@ -152,22 +170,21 @@
   <script>
     particlesJS("particles-js", {
       "particles": {
-        "number": { "value": 60 },
-        "color": { "value": ["#00c6ff", "#ff7e5f", "#80ffdb"] },
+        "number": { "value": 50 },
+        "color": { "value": ["#00f2fe", "#f7797d", "#c471ed"] },
         "shape": { "type": "circle" },
-        "opacity": { "value": 0.7, "random": true },
+        "opacity": { "value": 0.6, "random": true },
         "size": { "value": 3, "random": true },
-        "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.2, "width": 1 },
-        "move": { "enable": true, "speed": 2, "direction": "none", "random": true, "out_mode": "bounce" }
+        "line_linked": { "enable": true, "distance": 150, "color": "#ffffff", "opacity": 0.1, "width": 1 },
+        "move": { "enable": true, "speed": 1.5, "direction": "none", "random": true, "out_mode": "bounce" }
       },
       "interactivity": {
         "events": { "onhover": { "enable": true, "mode": "grab" } },
-        "modes": { "grab": { "distance": 200, "line_linked": { "opacity": 0.5 } } }
+        "modes": { "grab": { "distance": 200, "line_linked": { "opacity": 0.3 } } }
       },
       "retina_detect": true
     });
 
-    // Tab switching
     const tabs = document.querySelectorAll('.tab');
     const contents = document.querySelectorAll('.content');
     tabs.forEach(tab => {
@@ -179,7 +196,6 @@
       });
     });
 
-    // Fetch citation data
     fetch('https://serpapi.com/search.json?engine=google_scholar_author&author_id=_uFidiYAAAAJ&api_key=demo')
       .then(response => response.json())
       .then(data => {
@@ -202,4 +218,3 @@
   </script>
 </body>
 </html>
-
