--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
       <div class="tab" data-tab="metrics">Metrics</div>
       <div class="tab" data-tab="research">Research</div>
       <div class="tab" data-tab="contact">Contact</div>
+      <div class="tab" data-tab="location">Location</div>
     </div>
 
     <div class="content active" id="profile">
@@ -161,7 +162,7 @@
       </div>
     </div>
 
-    <div class="footer">
+      <div class="footer">
       &copy; 2025 Dr. Ajeet Bhagwat Bhane | Personal Research Website
     </div>
   </div>
