--- a/index.html
+++ b/index.html
@@ -28,23 +28,23 @@
     <div class="container" id="home">
         <img src="profile.jpg" alt="Dr. Ajeet Bhagwat Bhane" class="profile-img" />
         <h1>Dr. Ajeet Bhagwat Bhane</h1>
-        <p><strong>UGC approved Asst. Professor, Mechanical Engineering</strong><br>
-        Shree Ramchandra College of Engineering Pune<br>
-        <strong>Email:</strong> professorajeetbhane@gmail.com | <strong>Mobile:</strong> +91 9960528289, +91 9960533184</p>
+        <p><strong>Asst. Professor, Mechanical Engineering</strong><br>
+        SND College of Engineering & Research Center, Yeola Dist: Nasik<br>
+        <strong>Email:</strong> ajeetbhane@gmail.com | <strong>Mobile:</strong> +91 9960528289>
 
         <div class="card" id="about">
             <h2>About Me</h2>
-            <p>Dedicated academician with over 16 years teaching experience, specializing in stochastic FEM, tribology & vibration studies of composite plates.</p>
+            <p>Dedicated academician with over 16+ years teaching experience, specializing in stochastic FEM, tribology & vibration studies of composite plates.</p>
             <h3>Education</h3>
             <ul>
                 <li>Ph.D. (Mechanical), 2024</li>
                 <li>M.E. Mechanical (Design Engineering), 2015</li>
-                <li>B.E. Mechanical, 2011</li>
+                <li>B.E. Mechanical, 2009</li>
             </ul>
             <h3>Professional Roles</h3>
             <ul>
                 <li>PG Coordinator, Recognised Guide</li>
-                <li>Lab Incharge, IIC President, NAAC Criteria Head</li>
+                <li>Lab Incharge, IIC President, NBA Coordinator, NAAC Criteria Head</li>
                 <li>Guided 50+ projects, Editorial Board Member</li>
             </ul>
         </div>
@@ -62,8 +62,8 @@
 
         <div class="card" id="contact">
             <h2>Contact</h2>
-            <p>📍 Pune, Maharashtra, India</p>
-            <p><a href="mailto:professorajeetbhane@gmail.com">Email Me</a> | <a href="https://scholar.google.com">Google Scholar</a> | <a href="https://linkedin.com">LinkedIn</a> | <a href="https://researchgate.net">ResearchGate</a></p>
+            <p>📍 Nasik, Maharashtra, India</p>
+            <p><a href="mailto:ajeetbhane@gmail.com">Email Me</a> | <a href="https://scholar.google.com">Google Scholar</a> | <a href="https://linkedin.com">LinkedIn</a> | <a href="https://researchgate.net">ResearchGate</a></p>
         </div>
     </div>
 </body>
