--- a/index.html
+++ b/index.html
@@ -1,180 +1,140 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Dr. Ajeet Bhagwat Bhane | Research Profile</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Dr. Ajeet Bhagwat Bhane</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      min-height: 100vh;
+      font-family: 'Montserrat', sans-serif;
       margin: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      color: #fff;
+      padding: 0;
+      color: #333;
+      background-color: #f4f4f4;
+    }
+    header {
+      background: url('banner.jpg') no-repeat center center/cover;
+      color: white;
+      padding: 100px 20px 60px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 3rem;
+      margin-bottom: 0.5rem;
+    }
+    header p {
+      font-size: 1.25rem;
     }
     .container {
-      backdrop-filter: blur(12px);
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 20px;
-      box-shadow: 0 20px 50px rgba(0,0,0,0.5);
-      padding: 30px;
-      max-width: 850px;
-      width: 90%;
-      animation: fadeIn 1s ease-in-out;
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 20px;
+      background: #fff;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-    h1 {
-      text-align: center;
-      font-size: 2.2em;
-      margin-bottom: 10px;
-      background: linear-gradient(90deg, #ff6ec4, #7873f5);
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
+    section {
+      margin-bottom: 40px;
     }
-    .tabs {
-      display: flex;
-      justify-content: space-around;
-      margin-bottom: 20px;
+    section h2 {
+      font-size: 1.8rem;
+      margin-bottom: 15px;
+      color: #004080;
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 5px;
     }
-    .tab {
-      cursor: pointer;
-      padding: 12px 20px;
-      border-radius: 30px;
-      background: linear-gradient(135deg, #ff6ec4, #7873f5);
-      color: white;
-      font-weight: bold;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.3);
-      transition: transform 0.3s, background 0.3s;
+    ul {
+      padding-left: 20px;
     }
-    .tab:hover, .tab.active {
-      transform: scale(1.05);
-      background: linear-gradient(135deg, #43e97b, #38f9d7);
-    }
-    .content {
-      display: none;
-      animation: fadeIn 0.8s;
-    }
-    .content.active {
-      display: block;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
     }
     .card {
-      background: rgba(255,255,255,0.1);
-      border-radius: 15px;
+      background: #f9f9f9;
+      border: 1px solid #ddd;
       padding: 20px;
-      margin: 15px 0;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.3);
-      backdrop-filter: blur(8px);
-      transition: transform 0.3s;
+      border-radius: 10px;
     }
-    .card:hover {
-      transform: translateY(-5px) scale(1.02);
-    }
-    a {
-      color: #80ffdb;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    .footer {
+    footer {
+      background: #004080;
+      color: #fff;
       text-align: center;
-      margin-top: 30px;
-      font-size: 0.85em;
-      color: #ddd;
+      padding: 20px;
+      margin-top: 60px;
     }
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px);}
-      to { opacity: 1; transform: translateY(0);}
+    .btn {
+      display: inline-block;
+      margin-top: 10px;
+      padding: 10px 20px;
+      background-color: #007bff;
+      color: white;
+      border-radius: 5px;
+      text-decoration: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
+  <header>
     <h1>Dr. Ajeet Bhagwat Bhane</h1>
-    <div class="tabs">
-      <div class="tab active" data-tab="profile">Profile</div>
-      <div class="tab" data-tab="metrics">Metrics</div>
-      <div class="tab" data-tab="research">Research</div>
-      <div class="tab" data-tab="contact">Contact</div>
-    </div>
-
-    <div class="content active" id="profile">
-      <div class="card">
-        <strong>Affiliation:</strong><br>
-        Department of Mechanical Engineering, SND COE & RC, SPPU, Maharashtra, India
+    <p>Assistant Professor | Mechanical Engineering</p>
+    <p><strong>Email:</strong> ajeet.bhane@sndcoe.ac.in | <strong>Mobile:</strong> +91 9960528289</p>
+  </header>
+  <div class="container">
+    <section>
+      <h2>About Me</h2>
+      <p>Experienced academic with a Ph.D. in Mechanical Engineering, specializing in Design, Vibration, and Tribology. Passionate about guiding students and contributing to research and innovation.</p>
+    </section>
+    <section>
+      <h2>Experience</h2>
+      <ul>
+        <li>Assistant Professor, SRCOE Pune (2016–Present)</li>
+        <li>Assistant Professor, SND COE & RC Yeola (2012–2016)</li>
+        <li>Lecturer, Vikhe Patil Institute, Loni (2008–2012)</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Education</h2>
+      <ul>
+        <li>Ph.D. in Mechanical Engineering, 2024</li>
+        <li>M.E. in Design Engineering, 2015</li>
+        <li>B.E. in Mechanical Engineering, 2011</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Publications & Patents</h2>
+      <div class="grid">
+        <div class="card">
+          <strong>20+ Research Papers</strong>
+          <p>Published across IJETAE, IJEET, IJRG, and more.</p>
+        </div>
+        <div class="card">
+          <strong>2 Patents</strong>
+          <p>Published in 2023 and 2025 under Govt. of India.</p>
+        </div>
       </div>
-      <div class="card">
-        <strong>Google Scholar:</strong><br>
-        <a href="https://scholar.google.com/citations?user=_uFidiYAAAAJ" target="_blank">View Profile</a>
-      </div>
-    </div>
-
-    <div class="content" id="metrics">
-      <div class="card" id="metrics-data">
-        Loading citation data...
-      </div>
-    </div>
-
-    <div class="content" id="research">
-      <div class="card">
-        <strong>Research Interests:</strong><br>
-        Mechanical Design, Robotics & Automation, Fluid Mechanics, Thermal Systems
-      </div>
-      <div class="card">
-        <strong>Selected Publications:</strong><br>
-        <ul>
-          <li><strong>Machining of hybrid Al alloys</strong> (2025) — Citations: <span id="pub1">[Fetching]</span></li>
-          <li><strong>Torque to Preload in Bolt Joints</strong> (2024) — Citations: <span id="pub2">[Fetching]</span></li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="content" id="contact">
-      <div class="card">
-        Email: <a href="mailto:ajeetbhane@gmail.com">ajeetbhane@gmail.com</a>
-      </div>
-    </div>
-
-    <div class="footer">
-      &copy; 2025 Dr. Ajeet Bhagwat Bhane | Personal Research Website
-    </div>
+    </section>
+    <section>
+      <h2>Skills & Subjects</h2>
+      <ul>
+        <li>Robotics, Design, Mechatronics, Metallurgy</li>
+        <li>Engineering Graphics, Machine Design, AIML</li>
+        <li>Research Methodology, Automation</li>
+      </ul>
+    </section>
+    <section>
+      <h2>Contact</h2>
+      <p>Email: professorajeetbhane@gmail.com</p>
+      <p>Mobile: +91 9960533184</p>
+      <p>Location: Pune, Maharashtra, India</p>
+      <a href="mailto:professorajeetbhane@gmail.com" class="btn">Send Email</a>
+    </section>
   </div>
-
-  <script>
-    const tabs = document.querySelectorAll('.tab');
-    const contents = document.querySelectorAll('.content');
-
-    tabs.forEach(tab => {
-      tab.addEventListener('click', () => {
-        tabs.forEach(t => t.classList.remove('active'));
-        contents.forEach(c => c.classList.remove('active'));
-        tab.classList.add('active');
-        document.getElementById(tab.dataset.tab).classList.add('active');
-      });
-    });
-
-    fetch('https://serpapi.com/search.json?engine=google_scholar_author&author_id=_uFidiYAAAAJ&api_key=demo')
-      .then(response => response.json())
-      .then(data => {
-        const metrics = document.getElementById('metrics-data');
-        if(data && data.author){
-          metrics.innerHTML = `
-            <strong>Total Citations:</strong> ${data.author.cited_by}<br>
-            <strong>h-index:</strong> ${data.author.h_index}<br>
-            <strong>i10-index:</strong> ${data.author.i10_index}
-          `;
-          document.getElementById('pub1').textContent = data.articles[0]?.cited_by_count ?? 'N/A';
-          document.getElementById('pub2').textContent = data.articles[1]?.cited_by_count ?? 'N/A';
-        } else {
-          metrics.textContent = 'Could not fetch citation data.';
-        }
-      })
-      .catch(() => {
-        document.getElementById('metrics-data').textContent = 'Error loading citation data.';
-      });
-  </script>
+  <footer>
+    &copy; 2025 Dr. Ajeet Bhagwat Bhane. All rights reserved.
+  </footer>
 </body>
 </html>
