--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
       <tr><td>3</td><td>Academic Calendar of Institute and Department</td><td><a href="https://drive.google.com/file/d/1lP_Gp-1ORXYP0Wwg2bnFKOf1QOpVZtSC/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>4</td><td>Class & Personal Time Table</td><td><a href="https://drive.google.com/file/d/11X3kfGYKVQZg4j-jZndbq5a5GmBjIT7A/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>5</td><td>Syllabus Structure & Course Syllabus</td><td><a href="https://drive.google.com/file/d/1vXGsTxK578Pp16QFt0YC2wkpDhiEzDSi/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>6</td><td>Teaching Plan, Laboratory Plan</td><td><a href="https://drive.google.com/file/d/1-TUTiDNwuNDYkzmLZS4PruTg23VZnmyI/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr>
         <td>7</td>
         <td>
@@ -373,7 +373,7 @@
       </tr>
       <tr><td>8</td><td>Content Beyond Syllabus</td><td><a href="https://drive.google.com/file/d/1sybZS5Kk91xlqfxXRvhB_fz3wbmdMCW2/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>9</td><td>Last Three Question Papers And its Solution</td><td><a href="https://drive.google.com/file/d/1tXproCS8Q_zlDfAWkwAVGtQRNNlcpg71/view?usp=drive_link" target="_blank">View</a></td></tr>
-      <tr><td>10</td><td>Referred Journal Papers</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
+      <tr><td>10</td><td>Referred Journal Papers</td><td><a href="https://drive.google.com/drive/folders/1AR6O2wZfUBuR9viSDQ8yQCavTuvZDgF9?usp=sharing" target="_blank">View</a></td></tr>
       <tr><td>11</td><td>Mapping of COs and POs & Attainments</td><td><a href="https://www.sndcoe.ac.in" target="_blank">www.sndcoe.ac.in</a></td></tr>
       <tr><td>12</td><td>Gap Identification</td><td><a href="https://drive.google.com/file/d/1JkjIwB-bwftXLSa3Mi6HInh21AOrkcWO/view?usp=drive_link" target="_blank">View</a></td></tr>
       <tr><td>13</td><td>List of Practicals</td><td><a href="NA" target="_blank">NA</a></td></tr>
